libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__tab_indentation.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: JSON with tab indentation
expression: "\t{\t\"key\"\t:\t42\t}\t"
---
{ "key" : 42 }
