libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__trailing_comma.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Array with trailing comma
expression: "[1, 2, 3,]"
---
[ 1 , 2 , 3 , ]
