libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__trailing_comment.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Comment at the end should be skipped
expression: "42\n// This is a comment"
---
42
