libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__trailing_multiline_comment.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Simple multi-line comment should be skipped
expression: 42/* This is a multi-line comment */
---
42
