libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__unclosed_multiline_comment.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Unclosed multi-line comment
expression: /* This comment never ends
---
[31m[lexer::invalid-character] Error:[0m Lexer
   ╭─[ <unknown>:1:1 ]
   │
 1 │ /* This comment never ends
   │ ┬  
   │ ╰── Unrecognized character
   │ 
   │ Help: J-Expr only supports standard JSON syntax. Make sure you're using valid JSON tokens like {}, [], strings, numbers, true/false, or null.
───╯
