libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__unicode_string.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Unicode string
expression: "\"こんにちは世界\""
---
"こんにちは世界"
