libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__unterminated_string.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Unterminated string literal
expression: "\"hello"
---
[31m[lexer::invalid-string] Error:[0m Lexer
   ╭─[ <unknown>:1:7 ]
   │
 1 │ "hello
   │       │ 
   │       ╰─ Unterminated string
───╯
