libs/@local/hashql/syntax-jexpr/src/lexer/snapshots/hashql_syntax_jexpr__lexer__test__zero.snap
---
source: libs/@local/hashql/syntax-jexpr/src/lexer/mod.rs
description: Zero
expression: "0"
---
0
